# redrose

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  common.pri  redrose.pro
abc/: CMakeLists.txt  abc.c  abc.h  abc.pro  main.c  makefile.test  parser.c  parser.h  parser.peg
app/: AbcApplication.cpp  AbcApplication.h  AbcMainWindow.cpp  AbcMainWindow.h  AbcPlainTextEdit.cpp  AbcPlainTextEdit.h  AbcProcess.cpp  AbcProcess.h  CMakeLists.txt  EditTabWidget.cpp  EditTabWidget.h  EditVBoxLayout.cpp  EditVBoxLayout.h  EditWidget.cpp  EditWidget.h  HelpMenu.cpp  HelpMenu.h  MainHSplitter.cpp  MainHSplitter.h  PlayPushButton.cpp  PlayerThread.cpp  PlayerThread.h  PreferencesMenu.cpp  PreferencesMenu.h  RunPushButton.cpp  ScoreMenu.cpp  ScoreMenu.h  ScoreSvgWidget.h  TuneWaiter.cpp  TuneWaiter.h  ViewVSplitter.cpp  ViewVSplitter.h  abcmodel.cpp  abcmodel.h  abcsmf.cpp  abcsmf.h  abcsynth.cpp  abcsynth.h  app.pro  application-vnd-abc.xml  (+33 more)
snap/: snapcraft.yaml
